# Noetheris

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  pyproject.toml
benchmarks/: README.md  run_benchmarks.py  run_measured_benchmarks.py
crates/noetheris-core/: Cargo.toml
crates/noetheris-core/src/: certificate.rs  energy.rs  error.rs  hash.rs  lib.rs  structural.rs
docs/: adversary_model.md  algorithms.md  architecture.md  benchmarks.md  circuit_oracle_compiler.md  cv_quantum_bridge.md  dwave_mapping.md  dwave_relevance.md  ethical_security_boundaries.md  formal_certificates.md  hamiltonian_qaoa.md  ibm_quantum_mapping.md  ibm_quantum_relevance.md  invariant_annealing_search.md  limitations.md  mathematical_model.md  pqc_migration_optimizer.md  qubo_ising_compiler.md  reproducibility.md  roadmap.md  structural_ir.md  thesis.md  v0_2_roadmap.md
examples/: certificate_validation.py  consensus_protocol.json  consensus_safety_violation.py  cv_entanglement_diagnostics.py  cv_fock_truncation_diagnostics.py  cv_gkp_stabilizer_diagnostics.py  cv_lindblad_leakage_report.py  dwave_ocean_exchange.py  example_energy_certificate.json  invariant_annealing_search.py  lattice_toy_instance.json  pq_migration_optimizer.py  pqc_migration_graph.json  qiskit_oracle_export.py  qubo_ising_qaoa.py  saga_failure_semantics.py  threshold_policy_analysis.py  threshold_wallet_policy.json
scripts/: generate_release_results.py  run_all_python_tests.sh  run_audit.sh  run_benchmarks.sh  run_examples.sh  run_rust_tests.sh
tests/: test_certificates.py  test_circuits.py  test_cli.py  test_cv.py  test_external_examples.py  test_graph.py  test_invariant.py  test_lattice.py  test_migration.py  test_optional_integrations.py  test_qubo.py  test_structural_ir.py  (+1 more)
(+84 files in other folders)
