[workspace]
resolver = "2"
members = [
  "crates/noetheris-core",
  "crates/noetheris-graph",
  "crates/noetheris-qubo",
  "crates/noetheris-certificates",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mayckon Giovani"]
repository = "https://github.com/doomhammerhell/Noetheris"
description = "Noetheris v0.1.0 — Structural Quantum Security Kernel"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
