[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noetheris"
version = "0.1.0"
description = "Noetheris v0.1.0 — Structural Quantum Security Kernel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mayckon Giovani" }]
keywords = [
  "qubo",
  "quantum-optimization",
  "post-quantum-cryptography",
  "distributed-systems",
  "formal-methods",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
qiskit = ["qiskit>=1.0"]
dwave = ["dwave-ocean-sdk>=8.0"]

[project.scripts]
noetheris = "noetheris.cli:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
addopts = "-q"
